# learnopengl

./: CMakeLists.txt  Shader.h  dependencies  main.cpp
shaders/: default.vert
